--- a/Parcial_2.ipynb
+++ b/Parcial_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBwDCDwgaaDkQOIElSHk6Q",
+      "authorship_tag": "ABX9TyPCvcbctwCxB1mJK6pyBPTz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "bF7O-8Z2ZJDN"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
         "id": "86J4A5apZJqT",
         "outputId": "ad24f41e-f0b3-48e2-b614-85c27cfe4e84"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,8 +126,7 @@
         "        - Tiempo de establecimiento\n",
         "    - Obtener los valores equivalentes del sistema mecánico (m, c, k) y eléctrico (L, R, C)\n",
         "\"\"\"\n",
-        ")\n",
-        ""
+        ")\n"
       ],
       "metadata": {
         "colab": {
@@ -136,7 +135,7 @@
         "id": "7o-EQL35ZNm2",
         "outputId": "bb59dd59-e996-4c4e-b353-6fca10d71f42"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +276,7 @@
         "id": "1nh0TKdaZUDa",
         "outputId": "86c437f1-c840-46ee-ae7a-332d4fef3e76"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,7 +299,7 @@
         "id": "j-XkdqiRZYVo",
         "outputId": "c10eb294-dc08-41bd-8913-ec59f9f5fde4"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +351,7 @@
         "id": "Kkp326NXZbWJ",
         "outputId": "c7924d82-6a35-4fb4-ff2a-a219ad6937bf"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,14 +393,123 @@
         "if res.upper() == \"1\":\n",
         "    os.system(\"pkill streamlit\")  # Termina el proceso de Streamlit\n",
         "    print(\"El proceso de Streamlit ha sido finalizado.\")\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "rBCNxpGzZgPU"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Consulte y presente el modelo matemático del proceso de modulación y demodulación por amplitud en banda lateral única (SSB-AM), tanto en el dominio del tiempo como en el dominio de la frecuencia (mediante la transformada de Fourier).\n",
+        "## Apartir de este modelo, construya un dashboard interactivo sobre Streamlit que permita al usuario visualizar y comprender el proceso de modulación y demodulación SSB-AM. Para ello, utilice como señal mensaje: i) una señal pulso rectangular, ii) un segmento de 5 segundos de una canción. Implemente los filtros requeridos en el sistema SSB-AM utilizando filtros digitales recursivos (IIR), y visualice su comportamiento mediante el diagrama de Bode y el plano de polos y ceros. El dashboard debe describir de forma concreta y clara, cada una de las etapas del proceso, presentado gráficas relevantes de las señales obtenidas en etapas intermedias en el tiempo y la frecuencia"
+      ],
+      "metadata": {
+        "id": "AW2LDH6yj4-5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Modulación SSB-AM en el dominio del tiempo\n",
+        "\n",
+        "La modulación SSB (Single Side Band Amplitude Modulation) busca transmitir solo una de las bandas laterales del espectro de una señal AM, eliminando redundancia y haciendo más eficiente el uso del ancho de banda.\n",
+        "\n",
+        "La señal AM de doble banda lateral (DSB) se expresa como:\n",
+        "\n",
+        "$$\n",
+        "x_{DSB}(t) = m(t) \\cdot \\cos(2\\pi f_c t)\n",
+        "$$\n",
+        "\n",
+        "Donde:\n",
+        "\n",
+        "- $m(t)$: señal mensaje  \n",
+        "- $f_c$: frecuencia de la portadora\n",
+        "\n",
+        "Para obtener la señal SSB, se utiliza la Transformada de Hilbert $\\hat{m}(t)$, que genera la componente en cuadratura (90° de desfase). Entonces:\n",
+        "\n",
+        "$$\n",
+        "x_{SSB}(t) = m(t)\\cos(2\\pi f_c t) \\pm \\hat{m}(t)\\sin(2\\pi f_c t)\n",
+        "$$\n",
+        "\n",
+        "- El signo positivo (+) corresponde a la Banda Lateral Inferior (LSB)\n",
+        "- El signo negativo (−) corresponde a la Banda Lateral Superior (USB)\n",
+        "\n",
+        "Esta señal también se puede ver como la parte real de la señal analítica modulada:\n",
+        "\n",
+        "$$\n",
+        "x_{SSB}(t) = \\Re \\left\\{ [m(t) + j\\hat{m}(t)] \\cdot e^{j2\\pi f_c t} \\right\\}\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "### Modulación SSB-AM en el dominio de la frecuencia\n",
+        "\n",
+        "La Transformada de Fourier de $m(t)$ es $M(f)$, que tiene simetría conjugada:\n",
+        "\n",
+        "$$\n",
+        "M(-f) = M^*(f)\n",
+        "$$\n",
+        "\n",
+        "La modulación DSB genera:\n",
+        "\n",
+        "$$\n",
+        "X_{DSB}(f) = \\frac{1}{2} \\left[ M(f - f_c) + M(f + f_c) \\right]\n",
+        "$$\n",
+        "\n",
+        "Para obtener la SSB:\n",
+        "\n",
+        "- Banda Lateral Superior (USB):\n",
+        "\n",
+        "  $$\n",
+        "  X_{USB}(f) = M(f - f_c) \\cdot u(f)\n",
+        "  $$\n",
+        "\n",
+        "- Banda Lateral Inferior (LSB):\n",
+        "\n",
+        "  $$\n",
+        "  X_{LSB}(f) = M(f + f_c) \\cdot u(-f)\n",
+        "  $$\n",
+        "\n",
+        "Donde $u(f)$ es la función escalón de Heaviside, utilizada para eliminar una de las bandas laterales.\n",
+        "\n",
+        "Esto muestra cómo el espectro de la señal mensaje se desplaza en frecuencia y se trunca para conservar solo una banda lateral.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Demodulación SSB-AM\n",
+        "\n",
+        "La demodulación coherente consiste en multiplicar la señal SSB por una portadora $\\cos(2\\pi f_c t)$, y luego pasar el resultado por un filtro pasa bajas (LPF):\n",
+        "\n",
+        "$$\n",
+        "x_{SSB}(t) \\cdot \\cos(2\\pi f_c t) \\xrightarrow{\\text{LPF}} m(t)\n",
+        "$$\n",
+        "\n",
+        "Por ejemplo, para la **USB**:\n",
+        "\n",
+        "$$\n",
+        "x_{USB}(t) = m(t)\\cos(2\\pi f_c t) - \\hat{m}(t)\\sin(2\\pi f_c t)\n",
+        "$$\n",
+        "\n",
+        "Multiplicamos por $\\cos(2\\pi f_c t)$:\n",
+        "\n",
+        "$$\n",
+        "\\begin{aligned}\n",
+        "x_{USB}(t)\\cos(2\\pi f_c t) &= m(t)\\cos(2\\pi f_c t)\\cos(2\\pi f_c t) - \\hat{m}(t)\\sin(2\\pi f_c t)\\cos(2\\pi f_c t) \\\\\n",
+        "&= \\frac{m(t)}{2}[1 + \\cos(4\\pi f_c t)] - \\frac{\\hat{m}(t)}{2} \\sin(4\\pi f_c t)\n",
+        "\\end{aligned}$$\n",
+        "\n",
+        "Aplicando un **filtro pasa bajas** (eliminando componentes de alta frecuencia), se recupera:\n",
+        "\n",
+        "$$\n",
+        "y(t) = \\frac{1}{2} m(t)\n",
+        "$$\n"
+      ],
+      "metadata": {
+        "id": "a078wqIckjjW"
+      }
     }
   ]
 }
