--- a/Parcial_2.ipynb
+++ b/Parcial_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPjbvvrjqViLzIvOKivZks",
+      "authorship_tag": "ABX9TyNRO7PP3Th7ADT3JnhApYc8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,9 +62,9 @@
           "height": 174
         },
         "id": "izMGwd6hd-IL",
-        "outputId": "0dbbb1f2-3b98-4689-c73c-a8484c8f21aa"
+        "outputId": "0814ebb8-633f-46b9-f592-0b5ed865c736"
       },
-      "execution_count": 77,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,11 +73,11 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=18hLnsW5nwOM4PDpHfGNefB5-y7oLdi_s\n",
             "To: /content/punto0.png\n",
-            "100%|██████████| 21.9k/21.9k [00:00<00:00, 29.3MB/s]\n",
+            "100%|██████████| 21.9k/21.9k [00:00<00:00, 23.4MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1yFvF9wO81piylZmNcztEYAWO7yilrl9n\n",
             "To: /content/punto1.png\n",
-            "100%|██████████| 9.85k/9.85k [00:00<00:00, 18.7MB/s]\n"
+            "100%|██████████| 9.85k/9.85k [00:00<00:00, 16.9MB/s]\n"
           ]
         },
         {
@@ -91,7 +91,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 23
         }
       ]
     },
@@ -109,9 +109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bweOA8oDVhfZ",
-        "outputId": "03877208-ea02-4ac9-afa6-1ae9f9e4398c"
+        "outputId": "6fa5ca69-a0bf-49ee-cf61-e39b2eb24643"
       },
-      "execution_count": 78,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,13 +184,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YrQ5_uoLVbHr",
-        "outputId": "b2d7f7d8-249a-482e-d297-6062a4f6135d"
+        "outputId": "e60bb931-8351-4d5e-f713-ef29f9695a04"
       },
       "outputs": [
         {
@@ -266,9 +266,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cA_MY5ggWuY5",
-        "outputId": "783ec45f-760e-4b9a-d4c1-8473fc0f06e8"
+        "outputId": "8cfb9718-acc7-4ec3-91b9-c6c7e94ea59c"
       },
-      "execution_count": 80,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,9 +423,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mg5Y1mCbXt4F",
-        "outputId": "574ed794-75d3-4ce8-deac-86a48c82293a"
+        "outputId": "8b251567-38a1-402d-b6f3-3f2e3cd072af"
       },
-      "execution_count": 81,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,9 +446,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K2gPt-yUYq54",
-        "outputId": "097d559a-406a-460c-9391-8fa04463aa79"
+        "outputId": "9518dc09-dcb7-42aa-f9d7-aa85e077d610"
       },
-      "execution_count": 82,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,7 +599,6 @@
         "\n",
         "# ============ PESTAÑA 2: Consulta teórica ============ #\n",
         "with tabs[1]:\n",
-        "\n",
         "    st.markdown(r\"\"\"\n",
         "### Modulación SSB-AM en el dominio del tiempo\n",
         "\n",
@@ -613,10 +612,10 @@
         "\n",
         "Donde:\n",
         "\n",
-        "- \\( m(t) \\): señal mensaje\n",
-        "- \\( f_c \\): frecuencia de la portadora\n",
+        "- $ m(t) $: señal mensaje\n",
+        "- $ f_c $: frecuencia de la portadora\n",
         "\n",
-        "Para obtener la señal SSB, se utiliza la **Transformada de Hilbert** \\( \\hat{m}(t) \\), que genera la componente en cuadratura (90° de desfase). Entonces:\n",
+        "Para obtener la señal SSB, se utiliza la **Transformada de Hilbert** $\\hat{m}(t) $, que genera la componente en cuadratura (90° de desfase). Entonces:\n",
         "\n",
         "$$\n",
         "x_{SSB}(t) = m(t)\\cos(2\\pi f_c t) \\pm \\hat{m}(t)\\sin(2\\pi f_c t)\n",
@@ -625,7 +624,7 @@
         "- El signo **positivo (+)** corresponde a la **banda lateral inferior (LSB)**\n",
         "- El signo **negativo (−)** corresponde a la **banda lateral superior (USB)**\n",
         "\n",
-        "También puede representarse como la parte real de la señal analítica modulada:\n",
+        "También puede representarse como la parte real de la señal analítica:\n",
         "\n",
         "$$\n",
         "x_{SSB}(t) = \\Re \\left\\{ [m(t) + j\\hat{m}(t)] \\cdot e^{j2\\pi f_c t} \\right\\}\n",
@@ -635,7 +634,7 @@
         "\n",
         "### Modulación SSB-AM en el dominio de la frecuencia\n",
         "\n",
-        "La Transformada de Fourier de \\( m(t) \\) es \\( M(f) \\), que tiene **simetría conjugada**:\n",
+        "La Transformada de Fourier de $m(t)$ es $M(f)$, que tiene **simetría conjugada**:\n",
         "\n",
         "$$\n",
         "M(-f) = M^*(f)\n",
@@ -661,25 +660,25 @@
         "X_{LSB}(f) = M(f + f_c) \\cdot u(-f)\n",
         "$$\n",
         "\n",
-        "Donde \\( u(f) \\) es la función escalón de Heaviside, utilizada para eliminar una de las bandas laterales.\n",
+        "Donde $u(f) $ es la función escalón de Heaviside, usada para eliminar una de las bandas.\n",
         "\n",
         "---\n",
         "\n",
         "### Demodulación coherente en SSB-AM\n",
         "\n",
-        "La demodulación coherente consiste en multiplicar la señal SSB por una portadora \\( \\cos(2\\pi f_c t) \\) y luego aplicar un **filtro pasa bajas (LPF)**:\n",
+        "La demodulación coherente consiste en multiplicar la señal SSB por una portadora $\\cos(2\\pi f_c t) $, y luego aplicar un filtro pasa bajas (LPF):\n",
         "\n",
         "$$\n",
         "x_{SSB}(t) \\cdot \\cos(2\\pi f_c t) \\xrightarrow{\\text{LPF}} m(t)\n",
         "$$\n",
         "\n",
-        "Por ejemplo, para la señal USB:\n",
+        "Ejemplo para la USB:\n",
         "\n",
         "$$\n",
         "x_{USB}(t) = m(t)\\cos(2\\pi f_c t) - \\hat{m}(t)\\sin(2\\pi f_c t)\n",
         "$$\n",
         "\n",
-        "Multiplicando por \\( \\cos(2\\pi f_c t) \\):\n",
+        "Multiplicando:\n",
         "\n",
         "$$\n",
         "\\begin{aligned}\n",
@@ -688,7 +687,7 @@
         "\\end{aligned}\n",
         "$$\n",
         "\n",
-        "Aplicando un **filtro pasa bajas** para eliminar las componentes de alta frecuencia, se obtiene:\n",
+        "Aplicando LPF:\n",
         "\n",
         "$$\n",
         "y(t) = \\frac{1}{2} m(t)\n",
@@ -699,9 +698,11 @@
         "with tabs[2]:\n",
         "    st.markdown(\"### Simulación interactiva\")\n",
         "\n",
-        "    fs = 10000\n",
-        "    fc = 2000\n",
-        "    dur = 1\n",
+        "    fs = 10000  # Hz\n",
+        "    fc = 2000   # Hz\n",
+        "    dur = 1     # segundos\n",
+        "\n",
+        "    st.markdown(\"Este panel permite visualizar el proceso de **modulación y demodulación en banda lateral única (SSB-AM)** mediante la Transformada de Hilbert y filtrado digital.\")\n",
         "\n",
         "    opcion = st.radio(\"Seleccione la señal mensaje:\",\n",
         "                      (\"Pulso rectangular\", \"Fragmento de canción (.wav)\"))\n",
@@ -719,13 +720,11 @@
         "            st.audio(\"fragmento.wav\", format=\"audio/wav\")\n",
         "\n",
         "    if 'm' in locals():\n",
-        "        # Modulación\n",
-        "        carrier_cos = np.cos(2*np.pi*fc*t)\n",
-        "        carrier_sin = np.sin(2*np.pi*fc*t)\n",
+        "        carrier_cos = np.cos(2 * np.pi * fc * t)\n",
+        "        carrier_sin = np.sin(2 * np.pi * fc * t)\n",
         "        mh = np.imag(hilbert(m))\n",
         "        ssb_usb = m * carrier_cos - mh * carrier_sin\n",
         "\n",
-        "        # Demodulación\n",
         "        demod = ssb_usb * carrier_cos\n",
         "        b, a = butter(5, 0.2)\n",
         "        recuperada = lfilter(b, a, demod)\n",
@@ -735,21 +734,30 @@
         "        ax[0].plot(t, m)\n",
         "        ax[0].set_title(\"Señal mensaje $m(t)$\")\n",
         "        ax[1].plot(t, ssb_usb, color='orange')\n",
-        "        ax[1].set_title(\"Señal modulada $x_{SSB}(t)$\")\n",
+        "        ax[1].set_title(\"Señal modulada SSB $x_{SSB}(t)$\")\n",
         "        ax[2].plot(t, recuperada, color='green')\n",
-        "        ax[2].set_title(\"Señal demodulada\")\n",
-        "        for a_ in ax:\n",
-        "            a_.set_ylabel(\"Amplitud\")\n",
-        "            a_.grid()\n",
+        "        ax[2].set_title(\"Señal demodulada $y(t)$\")\n",
+        "\n",
+        "        for axis in ax:\n",
+        "            axis.set_ylabel(\"Amplitud\")\n",
+        "            axis.grid()\n",
+        "\n",
         "        ax[2].set_xlabel(\"Tiempo (s)\")\n",
         "        st.pyplot(fig)\n",
+        "\n",
+        "        st.markdown(\"\"\"\n",
+        "**Explicación de las gráficas:**\n",
+        "- La primera gráfica muestra la señal mensaje $m(t)$, que puede ser un pulso o un fragmento de audio.\n",
+        "- La segunda es la señal modulada SSB, donde solo se conserva una banda lateral.\n",
+        "- La tercera es la señal demodulada. A pesar de cierta atenuación, se recupera la forma original del mensaje.\n",
+        "\"\"\")\n",
         "\n",
         "        def plot_fft(sig, fs, title):\n",
         "            N = len(sig)\n",
         "            f = np.fft.fftfreq(N, 1/fs)\n",
         "            fft = np.fft.fft(sig)\n",
         "            fig, ax = plt.subplots(figsize=(8, 3))\n",
-        "            ax.plot(f[:N//2], np.abs(fft)[:N//2])\n",
+        "            ax.plot(f[:N//2], np.abs(fft[:N//2]))\n",
         "            ax.set_title(title)\n",
         "            ax.set_xlabel(\"Frecuencia (Hz)\")\n",
         "            ax.set_ylabel(\"Magnitud\")\n",
@@ -758,49 +766,49 @@
         "\n",
         "        st.subheader(\"📈 Espectros en frecuencia (FFT)\")\n",
         "        plot_fft(m, fs, \"Espectro del mensaje $M(f)$\")\n",
-        "        plot_fft(ssb_usb, fs, \"Espectro SSB $X_{SSB}(f)$\")\n",
-        "        plot_fft(recuperada, fs, \"Espectro demodulado $Y(f)$\")\n",
+        "        st.markdown(\"La señal original contiene ciertas frecuencias que queremos transmitir.\")\n",
+        "        plot_fft(ssb_usb, fs, \"Espectro de la señal SSB $X_{SSB}(f)$\")\n",
+        "        st.markdown(\"Se observa que solo se conserva una banda lateral, lo que mejora la eficiencia espectral.\")\n",
+        "        plot_fft(recuperada, fs, \"Espectro de la señal recuperada $Y(f)$\")\n",
+        "        st.markdown(\"Tras la demodulación y filtrado, el espectro intenta recuperar las frecuencias originales.\")\n",
         "\n",
-        "        st.subheader(\"⚙️ Filtro IIR utilizado\")\n",
-        "\n",
-        "        b = np.asarray(b, dtype=float)\n",
-        "        a = np.asarray(a, dtype=float)\n",
-        "\n",
-        "        # Bode\n",
+        "        st.subheader(\"⚙️ Filtro IIR usado en la demodulación\")\n",
         "        w, h = freqz(b, a, fs=fs)\n",
         "        fig_bode, ax_bode = plt.subplots()\n",
-        "        ax_bode.plot(w, 20*np.log10(abs(h)))\n",
-        "        ax_bode.set_title(\"Diagrama de Bode del filtro\")\n",
+        "        ax_bode.plot(w, 20 * np.log10(abs(h)))\n",
+        "        ax_bode.set_title(\"Diagrama de Bode del filtro (magnitud)\")\n",
         "        ax_bode.set_xlabel(\"Frecuencia (Hz)\")\n",
-        "        ax_bode.set_ylabel(\"Magnitud (dB)\")\n",
+        "        ax_bode.set_ylabel(\"Magnitud [dB]\")\n",
         "        ax_bode.grid()\n",
         "        st.pyplot(fig_bode)\n",
+        "        st.markdown(\"Este filtro paso bajo atenúa las frecuencias altas generadas por la modulación.\")\n",
         "\n",
-        "        # Polos y ceros\n",
         "        z, p, k = tf2zpk(b, a)\n",
         "        fig_zpk, ax_zpk = plt.subplots()\n",
         "        ax_zpk.plot(np.real(z), np.imag(z), 'ob', label='Ceros')\n",
         "        ax_zpk.plot(np.real(p), np.imag(p), 'xr', label='Polos')\n",
         "        ax_zpk.axhline(0, color='gray', linestyle='--')\n",
         "        ax_zpk.axvline(0, color='gray', linestyle='--')\n",
-        "        ax_zpk.set_title(\"Plano de Polos y Ceros\")\n",
+        "        ax_zpk.set_title(\"Plano de Polos y Ceros del filtro\")\n",
+        "        ax_zpk.set_xlabel(\"Parte Real\")\n",
+        "        ax_zpk.set_ylabel(\"Parte Imaginaria\")\n",
         "        ax_zpk.set_aspect('equal')\n",
         "        ax_zpk.grid()\n",
         "        ax_zpk.legend()\n",
         "        st.pyplot(fig_zpk)\n",
+        "        st.markdown(\"El plano polos y ceros permite analizar la estabilidad y respuesta del filtro digital.\")\n",
         "\n",
         "        if os.path.exists(\"fragmento.wav\"):\n",
-        "            os.remove(\"fragmento.wav\")\n",
-        "\n"
+        "            os.remove(\"fragmento.wav\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hlKeOz5SiTML",
-        "outputId": "681e4243-33b3-4b7f-b677-9d394e4574e8"
+        "outputId": "75b7a488-dd9e-4754-91d5-71436807985f"
       },
-      "execution_count": 83,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,7 +827,7 @@
       "metadata": {
         "id": "N2jEnhxriw8q"
       },
-      "execution_count": 84,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -861,35 +869,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7eHy3I9naAKL",
-        "outputId": "1a15ff89-fe0c-4512-f040-892ab35ec32e"
+        "outputId": "31ee0ebd-9a9e-4f11-82a8-69a3e239d37c"
       },
-      "execution_count": 85,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-07-07 02:01:59--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
-            "Resolving github.com (github.com)... 140.82.114.4\n",
-            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+            "--2025-07-07 02:23:23--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
+            "Resolving github.com (github.com)... 140.82.112.4\n",
+            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://github.com/cloudflare/cloudflared/releases/download/2025.7.0/cloudflared-linux-amd64 [following]\n",
-            "--2025-07-07 02:01:59--  https://github.com/cloudflare/cloudflared/releases/download/2025.7.0/cloudflared-linux-amd64\n",
+            "--2025-07-07 02:23:23--  https://github.com/cloudflare/cloudflared/releases/download/2025.7.0/cloudflared-linux-amd64\n",
             "Reusing existing connection to github.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T020159Z&X-Amz-Expires=1800&X-Amz-Signature=494d6d68616c91594a45018eb0a0ae4dde70a0cdf1d0e219ae3217c08982b638&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream [following]\n",
-            "--2025-07-07 02:01:59--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T020159Z&X-Amz-Expires=1800&X-Amz-Signature=494d6d68616c91594a45018eb0a0ae4dde70a0cdf1d0e219ae3217c08982b638&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream\n",
-            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T022323Z&X-Amz-Expires=1800&X-Amz-Signature=819711f95bdf42dbed4cdd137982934481219a4a2c1125028cd7ecfa3ba6d053&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream [following]\n",
+            "--2025-07-07 02:23:23--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/37d2bad8-a2ed-4b93-8139-cbb15162d81d?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250707%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250707T022323Z&X-Amz-Expires=1800&X-Amz-Signature=819711f95bdf42dbed4cdd137982934481219a4a2c1125028cd7ecfa3ba6d053&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream\n",
+            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.109.133, ...\n",
             "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 41168761 (39M) [application/octet-stream]\n",
             "Saving to: ‘cloudflared-linux-amd64’\n",
             "\n",
-            "cloudflared-linux-a 100%[===================>]  39.26M   154MB/s    in 0.3s    \n",
+            "cloudflared-linux-a 100%[===================>]  39.26M   149MB/s    in 0.3s    \n",
             "\n",
-            "2025-07-07 02:01:59 (154 MB/s) - ‘cloudflared-linux-amd64’ saved [41168761/41168761]\n",
+            "2025-07-07 02:23:23 (149 MB/s) - ‘cloudflared-linux-amd64’ saved [41168761/41168761]\n",
             "\n",
-            "Tu aplicación está disponible en: https://container-animation-salmon-bishop.trycloudflare.com\n"
+            "Tu aplicación está disponible en: https://frank-approach-rise-journalists.trycloudflare.com\n"
           ]
         }
       ]
